fixes spacing at top of commentarea for comment permalinks

--- a/css/threads.scss
+++ b/css/threads.scss
@@ -124,9 +124,8 @@ a.pretty-button.positive:hover { background-color: #05641A; }
 
 .commentarea {
   background: url('%%thread-background%%') repeat-x #1C110B;
-  margin: 0 10px 0 5px;
-  padding-right: 10px;
-  padding-bottom:10px;
+  margin: 0 10px 0 5px;\
+  padding:10px 10px 0;
 }
 .commentarea .child {
   border-left: 1px dotted #26150D;
